fix sorting issue and header overflow

--- a/static/css/sources/components/projects.less
+++ b/static/css/sources/components/projects.less
@@ -3,6 +3,7 @@
 	width: 300px;
 	color: white;
 	cursor: pointer;
+
 	&_preview {
 		color: rgba(255, 255, 255, 0.5);
 		padding: 5px 25px 5px 5px;
@@ -38,7 +39,7 @@
 
 		&_link {
 			float: left;
-			display: block;
+			width: 90%;
 			color: white;
 			text-decoration: none;
 			&:hover {
@@ -48,7 +49,9 @@
 		}
 		&_run {
 			float: right;
+			width: 10%;
 			color: rgba(255, 255, 255, 0.5);
+			text-align: right;
 			&:hover {
 				color: white;
 				text-decoration: none;
